--- a/LMessage/LMessage/Info.plist
+++ b/LMessage/LMessage/Info.plist
@@ -30,7 +30,11 @@
 		<true/>
 	</dict>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string></string>
+	<string>开启后台定位更好的为您服务</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
