--- a/LMessage/LMessage/Info.plist
+++ b/LMessage/LMessage/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>CFBundleDisplayName</key>
+	<string>位置报警</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -30,6 +32,8 @@
 		<true/>
 	</dict>
 	<key>NSLocationAlwaysUsageDescription</key>
+	<string>开启后台定位更好的为您服务</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>开启后台定位更好的为您服务</string>
 	<key>UIBackgroundModes</key>
 	<array>
